--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
+    <script src="charting.js"></script>
 </body>
 </html>
